test/files/neg/t10279.check
t10279.scala:9: error: could not find implicit value for parameter s: String
  foo(1) _
     ^
one error found
